gitops/apps/casdoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casdoor
  labels:
    app: casdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casdoor
  template:
    metadata:
      labels:
        app: casdoor
    spec:
      containers:
        - name: casdoor
          image: casbin/casdoor:v1.723.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
