gitops/apps/casdoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casdoor
spec:
  type: ClusterIP
  selector:
    app: minio-gojo
  ports:
  - name: http
    port: 80
    targetPort: http
