gitops/apps/casdoor/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: casdoor
  labels:
    app.kubernetes.io/name: casdoor
    app.kubernetes.io/instance: casdoor
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: casdoor
    app.kubernetes.io/instance: casdoor
