gitops/apps/casdoor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: casdoor
spec:
  parentRefs:
  - name: public
    namespace: istio-system
    sectionName: https
  hostnames:
  - casdoor.didactiklabs.io
  rules:
  - backendRefs:
    - name: casdoor
      port: 80
